--- a/src/GamesItem/GamesItem.css
+++ b/src/GamesItem/GamesItem.css
@@ -21,6 +21,7 @@
 .gamesItem img {
     margin: 5px;
     width: 50%;
+    max-height: 150px;
 }
 
 .gamesItem .on {
