--- a/src/SearchForm/SearchForm.css
+++ b/src/SearchForm/SearchForm.css
@@ -1,7 +1,7 @@
 .search-fields {
     display: grid;
     row-gap: 7px;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 2fr;
     padding: 5px;
 }
 
@@ -13,4 +13,9 @@
 .search input[type=submit] {
     margin: 15px auto;
     display: block;
+}
+
+.search {
+    max-width: 700px;
+    margin: auto;
 }
